--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="conteiner">
-      <div id="hijo">
+      <div id="hijo 2">
         <p>
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem
           nulla aliquid consequatur.
